Fixed center alignment on hero

--- a/sass/theme/_hero.scss
+++ b/sass/theme/_hero.scss
@@ -3,5 +3,14 @@
     #main {
 
         width: 100vw;
+
+        .jumbotron {
+
+            display: flex;
+
+            align-items: center;
+           
+            height: 40rem;
+        }
     }
 }
